--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -26,6 +26,6 @@
 
 \input{content/analisi}
 \input{content/progettazione}
-\input{content/timeline}
+\input{content/implementazione}
 
 \end{document}
