Modificata la suddivisione del lavoro

--- a/src_latex/content/progettazione.tex
+++ b/src_latex/content/progettazione.tex
@@ -5,7 +5,7 @@ L'approccio \textit{Mobile First} ci permette di concentrarci sulla modalità pr
 Invece l'approccio \textit{Responsive Web Design} si basa sul concetto di \textit{media query}, strumenti che ottimizzano la visualizzazione per specifiche dimensioni di dispositivi e vieport.\\
 Dall'analisi dell'utenza possiamo assumere che il sito verrà visitato da browser aggiornati e che quindi supportano le ultime feature degli standard HTML5 e CSS3.\\
 
-\section{Tipi di utente}
+\subsection{Tipi di utente}
 
 \begin{itemize}
     \item \textbf{Utente non registrato:} principale tipologia di utente, potrà solamente fruire del contenuto offerto dal sito e dagli utenti registrati.
@@ -87,36 +87,35 @@ Gli script Javascript sfruttano tutte funzionalità base del linguaggio e quindi
 Sfruttando inoltre i tag \textit{aria} si è cercato di dare maggiore significato a varie componenti della pagina quali la breadcrumb. Nei form invece l'attributo \textit{aria-required} è stato omesso dato che è già presente quello standard HTML nei tag di input.
 
 \subsection{Suddivisione del lavoro}
-Purtroppo a causa di foza maggiore dovute allo status di salute di uno dei membri del gruppo orginale il progetto è stato svolto da 3 persone suddividendosi il lavoro nei seguenti modi:
+Purtroppo a causa di foza maggiore dovute allo stato di salute di uno dei membri del gruppo orginale, il progetto è stato svolto da 3 persone. Ci siamo suddivisi il lavoro nel seguente modo.
+
 \begin{itemize}
     \item \textbf{Alessio Ferrarini:}
         \begin{itemize}
-            \item Progettazione del sito web.
-            \item Sviluppo dei componenti simil ORM (Object relational mapping) in PHP.
-            \item Sviluppo del componentPHPer astrarre la sosituzione nei template html.
-            \item RE
-            \item Sviluppo degli script php che si occupano dell' inserimento e rimozione dei dati tramite 
-            l'interealizzazione delfa realazione.iaccia ORM.
-            \item Sviluppo script javascript per l'ordinamento delle aule tramite API di geolocalizzazione.
+            \item Progettazione del sito web;
+            \item Sviluppo dei componenti simil ORM (Object relational mapping) in PHP;
+            \item Sviluppo del componente PHP per astrarre la sosituzione nei template HTML;
+            \item Sviluppo degli script PHP che si occupano dell'inserimento e rimozione dei dati tramite l'interfaccia ORM;
+            \item Sviluppo script javascript per l'ordinamento delle aule tramite API di geolocalizzazione;
         \end{itemize}
     \item \textbf{Alessandro Massarenti:}
         \begin{itemize}
-            \item Progettazione del sito web.
-            \item Design dell'aspetto grafico del sito.
-            \item Sviluppo dei fogli di stile css
-            \item Realizzazione ed impaginazione delle pagine HTML
-            \item Gestione e creazione ed elaborazione delle immagini presenti nel sito.
-            \item Realizzazione della relazione.
-            \item Sviluppo base di dati.
+            \item Progettazione del sito web;
+            \item Design dell'aspetto grafico del sito;
+            \item Sviluppo dei fogli di stile CSS;
+            \item Realizzazione ed impaginazione delle pagine HTML;
+            \item Sviluppo della base di dati;
+            \item Gestione e creazione ed elaborazione delle immagini presenti nel sito;
+            \item Realizzazione della relazione;
         \end{itemize}
     \item \textbf{Elia Pasquali:}
         \begin{itemize}
-            \item Progettazione del sito HTML
-            \item Design dell' aspetto grafico del sito.
-            \item Sviluppo deJavaScript javascript dedicati alla comparsa/scomparsa di componenti i
-            \item Inserimento dei componenti HTML con attributi aria dedicati all' accessibilità.
-            \item Realizzazione della realazione.nterattivi. avascript dedicati alla validazione  egli in
-            \item Sviluppo base di dati.
+            \item Progettazione del sito web;
+            \item Sviluppo del JavaScript dedicato alla comparsa/scomparsa di elementi;
+            \item Inserimento dei componenti HTML con attributi aria dedicati all'accessibilità;
+            \item Realizzazione della realazione;
+            \item Realizzazione del codice JavaScript dedicato alla validazione dei form in maniera accessibile;
         \end{itemize}
-t\end{itemize}
-Nonostant questa suddivisione tt i mebri mbri hanno collaborato in tutti gli aspetti della realizzazione del sito soprattutto per quanto riguarda l'accessibiltà di esso.ta suddivisione tt i mebri 
+\end{itemize}
+
+Nostante questa suddivisione, tutti i mebri membri hanno collaborato in tutti gli aspetti della realizzazione del sito soprattutto per quanto riguarda l'accessibiltà di esso.
