Modificata Realizzazione della relazione in "stesura"

--- a/src_latex/content/progettazione.tex
+++ b/src_latex/content/progettazione.tex
@@ -97,6 +97,7 @@ Purtroppo a causa di foza maggiore dovute allo stato di salute di uno dei membri
             \item Sviluppo del componente PHP per astrarre la sosituzione nei template HTML;
             \item Sviluppo degli script PHP che si occupano dell'inserimento e rimozione dei dati tramite l'interfaccia ORM;
             \item Sviluppo script javascript per l'ordinamento delle aule tramite API di geolocalizzazione;
+            \item Stesura della relazione;
         \end{itemize}
     \item \textbf{Alessandro Massarenti:}
         \begin{itemize}
@@ -106,14 +107,14 @@ Purtroppo a causa di foza maggiore dovute allo stato di salute di uno dei membri
             \item Realizzazione ed impaginazione delle pagine HTML;
             \item Sviluppo della base di dati;
             \item Gestione e creazione ed elaborazione delle immagini presenti nel sito;
-            \item Realizzazione della relazione;
+            \item Stesura della relazione;
         \end{itemize}
     \item \textbf{Elia Pasquali:}
         \begin{itemize}
             \item Progettazione del sito web;
             \item Sviluppo del JavaScript dedicato alla comparsa/scomparsa di elementi;
             \item Inserimento dei componenti HTML con attributi aria dedicati all'accessibilità;
-            \item Realizzazione della realazione;
+            \item Stesura della realazione;
             \item Realizzazione del codice JavaScript dedicato alla validazione dei form in maniera accessibile;
         \end{itemize}
 \end{itemize}
