--- a/src_latex/content/progettazione.tex
+++ b/src_latex/content/progettazione.tex
@@ -54,7 +54,7 @@ Vediamo per ogni pagina come è strutturato il contenuto:
         \item \textbf{Aula} La pagina dell'aula contiene una galleria di immagini rappresentative. Sono contenute tutte le informazioni interessanti dell'aula quali posti disponibili, posizione e presenza o meno di connessione e possibilità di utilizzare prese di corrente. Anche in queste pagine è possibile lasciare e visualizzare le recensioni.
     \end{itemize}
     \item \textbf{FAQ} La pagina delle \textit{FAQ} contiene le \textit{Frequently Asked Question}. Queste sono rappresentate tramite una \textit{definition list}. Questa pagina è principalmente statica in quanto queste risposte sono già ben definite.
-    \item \textit{Accedi e Registrati} Le due pagine che permettono all'utente di entrare nella community tramite due \textit{form} che sfruttano a pieno i controlli offerti dall'\textit{input HTML5} e i dati inviati vengono poi controllati via Javascript lato client e via PHP lato server.
+    \item \textbf{Accedi e Registrati} Le due pagine che permettono all'utente di entrare nella community tramite due \textit{form} che sfruttano a pieno i controlli offerti dall'\textit{input HTML5} e i dati inviati vengono poi controllati via Javascript lato client e via PHP lato server.
 \end{itemize}
 Sono presenti due pagine aggiuntive non direttamente raggiungibili:
 \begin{itemize}
@@ -72,18 +72,25 @@ Durante la progettazione del sito si è deciso di voler trasmettere un senso di 
 Inoltre nelle pagina dell'errore 404 è deciso di utilizzare una battuta in cui gli studenti che hanno visitato almeno una volta Torre Archimede possono identificarsi. Invece per la pagina che gestisce gli errori 500 abbiamo puntato di nuovo su una battuta.
 
 \subsection{Accessibilità}
-Tutto lo sviluppo del sito si è svolto tenendo a mente le raccomandazioni dello standard WCAG 2.0.\\ Abbiamo inoltre testato il tutto numerose volte tramite Lighthouse, software di google fornito all'interno di Google Chrome.
+Tutto lo sviluppo del sito si è svolto tenendo a mente le raccomandazioni dello standard WCAG 2.0.\\Abbiamo inoltre testato il tutto numerose volte tramite Lighthouse, software di google fornito all'interno di Google Chrome e tramite i controlli di accessibilità tramite i Developer Tools di FIrefox.
 
 \subsubsection{Separazione tra contenuto, presentazione e struttura}
 La separazione tra queste tre parti fondamentali del sito ha permesso di gestire al meglio le possibili categorie di accesso effettuate dai vari utenti. La parte di contenuto è stata sviluppata tramite HTML5 in modo da sfruttare a pieno i tag semantici e le nuove aggiunte dello standard. Tramite CSS sono state poi aggiunte tutte le regole di presentazione per il layout del sito. Il comportamento dinamico del sito è stato sviluppato con il linguaggio Javascript.\\ Sfruttando gli strumenti del W3C, ad esempio il validatore di HTML e CSS, ci siamo accertati di aver rispettato tutte le regole dello standard.
 
-\subsection{Assenza di CSS}
+\subsubsection{Assenza di CSS}
 In caso di assenza di CSS, il sito mantiene una struttura comprensibile e veicola tutto il contenuto esclusivamente in HTML5. Per un'utente che utilizza strumenti di accesso facilitato per visitare il sito tutto è comunque raggiungibile.
 
-\subsection{Assenza di JS}
+\subsubsection{Assenza di JS}
 Gli script Javascript sfruttano tutte funzionalità base del linguaggio e quindi non richiedono librerie esterne.
 
-\subsection{Attributi aria}
+\subsubsection{Attributi ARIA}
+Nonostante aver utilizzato il più possibile i tag semantici offerti da HTML5 abbiamo inserito anche alcuni attributi ARIA in modo da rendere più "espressivi" e accessibli.
+\begin{itemize}
+    \item \textbf{Breadcrumb:} la braedcrumb è stata definita tramite \textit{aria-label} come \textit{breadcrumb}, inoltre la pagina attuale è indicata dall'attributo \textit{aria-page="current"}.
+    \item \textbf{Validazione dei form:} lo script di validazione del form aggiunge un elemento nel DOM dinamicamente. Viene quindi indicato tramite dal ruolo \textit{aria-role="alert"} che porta l'attenzione dello screen reader su di esso quando questoviene inserito nella pagina.
+    \item \textbf{Bottoni link}: quando non è stato possibile sfruttare tag come \textit{<button>} è stato necessario usare l'attributo \textit{role="button"} su quei link \textit{<a>} che vengono rappresentati come bottoni via CSS.
+\end{itemize}
+
 Sfruttando inoltre i tag \textit{aria} si è cercato di dare maggiore significato a varie componenti della pagina quali la breadcrumb. Nei form invece l'attributo \textit{aria-required} è stato omesso dato che è già presente quello standard HTML nei tag di input.
 
 \subsection{Suddivisione del lavoro}
