--- a/src_latex/content/progettazione.tex
+++ b/src_latex/content/progettazione.tex
@@ -90,8 +90,7 @@ Nonostante aver utilizzato il più possibile i tag semantici offerti da HTML5 ab
     \item \textbf{Validazione dei form:} lo script di validazione del form aggiunge un elemento nel DOM dinamicamente. Viene quindi indicato tramite dal ruolo \textit{aria-role="alert"} che porta l'attenzione dello screen reader su di esso quando questoviene inserito nella pagina.
     \item \textbf{Bottoni link}: quando non è stato possibile sfruttare tag come \textit{<button>} è stato necessario usare l'attributo \textit{role="button"} su quei link \textit{<a>} che vengono rappresentati come bottoni via CSS.
 \end{itemize}
-
-Sfruttando inoltre i tag \textit{aria} si è cercato di dare maggiore significato a varie componenti della pagina quali la breadcrumb. Nei form invece l'attributo \textit{aria-required} è stato omesso dato che è già presente quello standard HTML nei tag di input.
+Altri attributi aria come \textit{aria-requried} e simili nei form sono stati omessi dato che sono già presenti quelli nativi di HTML5 che veicolano lo stesso significato.
 
 \subsection{Suddivisione del lavoro}
 Purtroppo a causa di foza maggiore dovute allo stato di salute di uno dei membri del gruppo orginale, il progetto è stato svolto da 3 persone. Ci siamo suddivisi il lavoro nel seguente modo.
