inizio abbandono triste

--- a/src_latex/main.tex
+++ b/src_latex/main.tex
@@ -27,5 +27,6 @@
 \input{content/analisi}
 \input{content/progettazione}
 \input{content/implementazione}
+\input{content/sviluppi_futuri}
 
 \end{document}
