--- a/src_latex/content/progettazione.tex
+++ b/src_latex/content/progettazione.tex
@@ -89,6 +89,7 @@ Nonostante aver utilizzato il più possibile i tag semantici offerti da HTML5 ab
     \item \textbf{Breadcrumb:} la braedcrumb è stata definita tramite \textit{aria-label} come \textit{breadcrumb}, inoltre la pagina attuale è indicata dall'attributo \textit{aria-page="current"}.
     \item \textbf{Validazione dei form:} lo script di validazione del form aggiunge un elemento nel DOM dinamicamente. Viene quindi indicato tramite dal ruolo \textit{aria-role="alert"} che porta l'attenzione dello screen reader su di esso quando questoviene inserito nella pagina.
     \item \textbf{Bottoni link}: quando non è stato possibile sfruttare tag come \textit{<button>} è stato necessario usare l'attributo \textit{role="button"} su quei link \textit{<a>} che vengono rappresentati come bottoni via CSS.
+    \item \textbf{Link aule}: nelle card delle aule è stata aggiunta una \textit{aria-label} dinamica per dare maggior significato al link \textit{Più info}.
 \end{itemize}
 Altri attributi aria come \textit{aria-requried} e simili nei form sono stati omessi dato che sono già presenti quelli nativi di HTML5 che veicolano lo stesso significato.
 
